Bug 669001 - Vary: User-Agent + new UA string (i.e. after update) + HTTP 304 = broken cache, r=bz